data/derived/sp14/progs/unify/prog0228.ml.out
Characters 161-162:
  | [] -> 0
          ^
Error: This expression has type int but an expression was expected of type
         int list
